<resources>
    <string name="app_name">Sumar o Restar</string>

    <string name="xml_rb_sumar">Sumar</string>
    <string name="xml_rb_restar">Restar</string>

    <string name="xml_txt_num1">Ingresa el primer valor</string>
    <string name="xml_txt_num2">Ingresa el segundo valor</string>

    <string name="xml_boton">Calcular</string>

    <string name="xml_tv">Resultado</string>

</resources>